syntax = "proto3";

package inventory;

option go_package = "github.com/systaxiecuador/polyglot-micro/inventory-service/proto";

service InventoryService {
  // RPC para obtener stock (Lectura)
  rpc GetStock (GetStockRequest) returns (StockResponse);
  
  // RPC para disminuir stock (Escritura - Transaccional)
  rpc DecreaseStock (DecreaseStockRequest) returns (StockResponse);
}

message GetStockRequest {
  int32 product_id = 1;
}

message DecreaseStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  string order_id = 3; // Para trazabilidad (Idempotencia)
}

message StockResponse {
  int32 product_id = 1;
  int32 current_stock = 2;
  bool success = 3;
  string message = 4;
}